--- a/index.html
+++ b/index.html
@@ -1,14 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
+    <title>Noclegi Bulanda</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+            margin: 0 auto;
+            /* width: 80vw; */
+            height: 2000vh;
+        }
+
+        section.welcome {
+            display: flex;
+            justify-content: start;
+            flex-direction: column;
+            align-items: center;
+            background-image: url(img/Widok5.jpg);
+            background-position: center center;
+            /* width: 100%; */
+            background-size: cover;
+        }
+
+        section.welcome h1 {
+            margin-top: 100px;
+            font-size: 50px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        section.welcome h2 {
+            margin-top: 100px;
+            font-size: 50px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        section {
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+        }
+    </style>
 </head>
+
 
 <body>
 
+    <section class="welcome">
+        <div class="burger"></div>
+        <h1>Bulanda wypoczynek</h1>
+        <h2>Witaj w ostoi relaksu na łonie natury</h2>
+        <button></button>
+    </section>
+    <section class="discover">
+        <p>Wspaniała lokalizacja z przepięknymi widokami w otoczeniu lasów, beskidu wyspowego z mnóstwem szlaków
+            rowerowych i pieszych z dala od miejskiego zgiełku. Najlepsze lekarstwo na skołatane nerwy , naprawę relacji
+            rodzinnych czy po prostu Toja zasłużona przerwa od obowiązków, problemów, codzienności.
+            Najważniejsze że czekamy na Was!
+        </p>
+    </section>
+    <section class="offer">
+        <p>Nasza oferta:</p>
+    </section>
+    <section class="place">
+        <p>przytulny pokój z widokiem na dolinę w kierunku północnym, wspaniały żeby ukryć się przed miejskim skwarem.
+            Dwa pojedyncze łóżka z możlwiością dostawki, aneks kuchenny oraz osobna toaleta</p>
+    </section>
+    <section class="extra">
+        <p>ruska bania - tradycyjny sposób na relaks w tradycyjny sposób. Odświeżająca z potencjałem. Finał biesiady,
+            atrakcja intensywnego dnia czy romantyczny wieczór? Wybierzcie sami.</p>
+    </section>
+    <section class="expansion">
+        <p>w najbliższych sezonach planujemy wzbogacenie oferty o saunę</p>
+    </section>
+    <section class="season">
+        <p>Zapraszamy cały rok!</p>
+    </section>
+    <section class="map">
+        <p>najlepiej trafić do nas kierując się do Lipnicy a potem wdłóż szlaku czerownego</p>
+    </section>
+    <section class="contact">
+        <ul>
+            <li>telefon</li>
+            <li>mail</li>
+            <li>facebook</li>
+        </ul>
+    </section>
 </body>
 
 </html>
