sekcja welcome H i tło

--- a/index.html
+++ b/index.html
@@ -5,49 +5,7 @@
     <meta charset="UTF-8">
     <title>Noclegi Bulanda</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-            margin: 0 auto;
-            /* width: 80vw; */
-            height: 2000vh;
-        }
-
-        section.welcome {
-            display: flex;
-            justify-content: start;
-            flex-direction: column;
-            align-items: center;
-            background-image: url(img/Widok5.jpg);
-            background-position: center center;
-            /* width: 100%; */
-            background-size: cover;
-        }
-
-        section.welcome h1 {
-            margin-top: 100px;
-            font-size: 50px;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        section.welcome h2 {
-            margin-top: 100px;
-            font-size: 50px;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        section {
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-        }
-    </style>
+    <link rel="stylesheet" href="css.css">
 </head>
 
 
