zmiana podejścia na mobile first
zamiast stawiac całą stronę na PC, przeszedłem na MBfirst i zacząłem od ustawienia sekcji "welcome" dla wartości responsywnych

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Noclegi Bulanda</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
 
 
@@ -15,14 +17,20 @@
         <div class="burger"></div>
         <h1>Bulanda wypoczynek</h1>
         <h2>Witaj w ostoi relaksu na łonie natury</h2>
-        <button></button>
+        <button class="arrow">
+            <i class="fas fa-angle-down"></i>
+        </button>
     </section>
     <section class="discover">
-        <p>Wspaniała lokalizacja z przepięknymi widokami w otoczeniu lasów, beskidu wyspowego z mnóstwem szlaków
-            rowerowych i pieszych z dala od miejskiego zgiełku. Najlepsze lekarstwo na skołatane nerwy , naprawę relacji
-            rodzinnych czy po prostu Toja zasłużona przerwa od obowiązków, problemów, codzienności.
-            Najważniejsze że czekamy na Was!
-        </p>
+        <div>
+            <p>Wspaniała lokalizacja z przepięknymi widokami w otoczeniu lasów, beskidu wyspowego z mnóstwem szlaków
+                rowerowych i pieszych z dala od miejskiego zgiełku. Najlepsze lekarstwo na skołatane nerwy , naprawę
+                relacji
+                rodzinnych czy po prostu Toja zasłużona przerwa od obowiązków, problemów, codzienności.
+                Najważniejsze że czekamy na Was!
+            </p>
+        </div>
+        <img src="img/Widok6.jpg" alt="">
     </section>
     <section class="offer">
         <p>Nasza oferta:</p>
@@ -51,6 +59,7 @@
             <li>facebook</li>
         </ul>
     </section>
+
 </body>
 
 </html>
