--- a/index.html
+++ b/index.html
@@ -22,35 +22,55 @@
         </button>
     </section>
     <section class="discover">
-        <div>
+        <div class="picture"></div>
+        <div class="text">
             <p>Wspaniała lokalizacja z przepięknymi widokami w otoczeniu lasów, beskidu wyspowego z mnóstwem szlaków
                 rowerowych i pieszych z dala od miejskiego zgiełku. Najlepsze lekarstwo na skołatane nerwy , naprawę
-                relacji
-                rodzinnych czy po prostu Toja zasłużona przerwa od obowiązków, problemów, codzienności.
-                Najważniejsze że czekamy na Was!
-            </p>
+                relacji rodzinnych czy po prostu Twoja zasłużona przerwa od obowiązków, problemów, codzienności.
+                Najważniejsze, że czekamy na Was! </p>
         </div>
-        <img src="img/Widok6.jpg" alt="">
     </section>
     <section class="offer">
-        <p>Nasza oferta:</p>
+        <div class="picture"></div>
+        <div class="text">
+            <p>Nasza oferta:</p>
+        </div>
     </section>
     <section class="place">
-        <p>przytulny pokój z widokiem na dolinę w kierunku północnym, wspaniały żeby ukryć się przed miejskim skwarem.
-            Dwa pojedyncze łóżka z możlwiością dostawki, aneks kuchenny oraz osobna toaleta</p>
+        <div class="picture"></div>
+        <div class="text">
+            <p>przytulny pokój z widokiem na dolinę w kierunku północnym, wspaniały żeby ukryć się przed miejskim
+                skwarem. Dwa pojedyncze łóżka z możlwiością dostawki, aneks kuchenny oraz osobna toaleta </p>
+        </div>
     </section>
     <section class="extra">
-        <p>ruska bania - tradycyjny sposób na relaks w tradycyjny sposób. Odświeżająca z potencjałem. Finał biesiady,
-            atrakcja intensywnego dnia czy romantyczny wieczór? Wybierzcie sami.</p>
+        <div class="picture"></div>
+        <div class="text">
+            <p>ruska bania - tradycyjny sposób na relaks w tradycyjny sposób. Odświeżająca z potencjałem. Finał
+                biesiady,
+                atrakcja intensywnego dnia czy romantyczny wieczór? Wybierzcie sami.</p>
+        </div>
     </section>
     <section class="expansion">
-        <p>w najbliższych sezonach planujemy wzbogacenie oferty o saunę</p>
+        <div class="picture"></div>
+        <div class="text">
+            <p>w najbliższych sezonach planujemy wzbogacenie oferty o saunę</p>
+        </div>
     </section>
     <section class="season">
-        <p>Zapraszamy cały rok!</p>
+        <div class="picture"></div>
+        <div class="text">
+            <p>Zapraszamy cały rok!</p>
+        </div>
     </section>
     <section class="map">
-        <p>najlepiej trafić do nas kierując się do Lipnicy a potem wdłóż szlaku czerownego</p>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d82844.93331214941!2d20.392063660673756!3d49.542960803971035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473dfe439d801243%3A0xff310a67bc2668fe!2zxYHEhWNrbw!5e0!3m2!1spl!2spl!4v1595248744189!5m2!1spl!2spl"
+            width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+            tabindex="0"></iframe>
+        <div class="text">
+            <p>najlepiej trafić do nas kierując się do Lipnicy a potem wdłóż szlaku czerownego</p>
+        </div>
     </section>
     <section class="contact">
         <ul>
