działające menu i korekty stylowe tekstu

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <section class="discover">
         <div class="picture"></div>
         <div class="text">
+            <h2>Odkryj nas</h2>
             <p>Wspaniała lokalizacja na południowym stoku góry Modyń. Z przepięknymi widokami na Beskid Wyspowy
                 (Przehyba, Dolina Dunajca) Pieniny, Gorce (m.in. Lubań) oraz Tatry. Domek znajduje się w otoczeniu
                 lasów, z mnóstwem szlaków rowerowych i pieszych z dala od miejskiego zgiełku. Najlepsze lekarstwo na
@@ -70,7 +71,8 @@
     <section class="place m2 rev">
         <div class="picture"></div>
         <div class="text">
-            <p>Nasza oferta:
+            <h2>Nasza oferta</h2>
+            <p>
                 Pokój z łóżkiem małżeńskim wraz z balkonem, z widokiem na opisany w poprzedniej karcie krajobraz.
             </p>
         </div>
@@ -78,6 +80,7 @@
     <section class="place m3">
         <div class="picture"></div>
         <div class="text">
+            <h2>Pokój dla trzech osób</h2>
             <p>Trzyosobowy pokój z trzema oddzielnymi łóżkami wraz z balkonem, z widokiem na opisany w poprzedniej
                 karcie krajobraz.</p>
         </div>
@@ -85,18 +88,21 @@
     <section class="place dzienny rev">
         <div class="picture"></div>
         <div class="text">
+            <h2>Pokój dzienny</h2>
             <p>Pokój dzienny z sofą, stolikiem kawowym, telewizorem z smart tv oraz aneksem kuchennym.</p>
         </div>
     </section>
     <section class="place lazienka">
         <div class="picture"></div>
         <div class="text">
+            <h2>Łazienka</h2>
             <p>Łazienka z prysznicem.</p>
         </div>
     </section>
     <section class="extra rev">
         <div class="picture"></div>
         <div class="text">
+            <h2>Ruska bania</h2>
             <p>Ruska bania (za dodatkową opłatą), tradycyjny sposób na relaks w tradycyjny sposób. Odświeżająca z
                 potencjałem. Finał biesiady, atrakcja intensywnego dnia czy romantyczny wieczór? Wybierzcie sami. ( W
                 przyszłości oferta zostanie poszerzona o saunę fińską).</p>
@@ -105,6 +111,7 @@
     <section class="expansion">
         <div class="picture"></div>
         <div class="text">
+            <h2>Już niedługo</h2>
             <p>W najbliższym sezonie planujemy wzbogacenie oferty o plac zabaw dla Waszych pociech. (zdjęcie bez zmian)
             </p>
         </div>
@@ -112,7 +119,7 @@
     <section class="season rev">
         <div class="picture"></div>
         <div class="text">
-            <p>Zapraszamy cały rok!</p>
+            <h2>Zapraszamy cały rok!</h2>
         </div>
     </section>
     <section class="map">
